# nexus-crypto-ai

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
apps/api/: drizzle.config.ts  package.json  tsconfig.json
apps/api/src/: app.ts  index.ts
apps/api/src/db/: index.ts
apps/api/src/db/schema/: alerts.ts  (+6 more)
apps/api/src/jobs/: alert-evaluation.ts  portfolio-sync.ts  price-ingestion.ts
apps/api/src/lib/: queue.ts  redis.ts
apps/api/src/types/: fastify.d.ts
apps/ml-service/: pyproject.toml  requirements.txt
apps/ml-service/src/: config.py  main.py
apps/ml-service/src/api/: patterns.py  predict.py  router.py  sentiment.py
apps/ml-service/src/features/: on_chain.py  pipeline.py  social.py  technical.py
apps/ml-service/src/models/: ensemble.py  lstm.py  pattern_detector.py  registry.py  sentiment_analyzer.py  transformer.py
apps/ml-service/src/schemas/: prediction.py
apps/ml-service/tests/: test_health.py
apps/ml-service/training/scripts/: train_lstm.py  train_transformer.py
apps/mobile/: app.json  index.js  metro.config.js  package.json  tsconfig.json
apps/mobile/src/: App.tsx
apps/mobile/src/navigation/: AuthStack.tsx  MainTabs.tsx  RootNavigator.tsx
apps/mobile/src/services/: api.ts  biometric.ts  storage.ts  websocket.ts
apps/mobile/src/stores/: alerts.ts  auth.ts  market.ts  portfolio.ts  predictions.ts  settings.ts  websocket.ts
apps/mobile/src/theme/: colors.ts  glassmorphism.ts  index.ts  typography.ts
docker/: api.Dockerfile  docker-compose.yml  ml-service.Dockerfile
scripts/: seed-db.ts  setup.sh
(+44 files in other folders)
