[project]
name = "nexus-ml-service"
version = "0.1.0"
description = "ML microservice for Nexus Crypto AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "torch>=2.5.0",
    "scikit-learn>=1.6.0",
    "ta>=0.11.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
